Failure to rotate audit log on startup does not cause node startup to fail

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Security 2021-11-29, Security 2021-12-13, Security 2021-12-27
    • 39
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a node starts up, it rotates the audit log. If there is a failure on rotate, as observed in BF-23438, we want the node to not start up. However, in BF 23438, the node ignored the 'rotate failed' error and continued starting up, which is incorrect.

            Assignee:
            Adam Rayner
            Reporter:
            Shreyas Kalyan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: