SERVER-61699 Abort startup if audit log rotate fails

GitOrigin-RevId: 83007ce90279ac3a5bd494d8f154d74f01b39484