src/mongo/db/modules/enterprise/src/audit/audit_manager.cpp
@@ -287,8 +287,16 @@ const AuditEncryptionCompressionManager* AuditManager::getAuditEncryptionCompres
     return _ac.get();
 }
 
+// Only to be called on startup - if an initial rotate is attempted but does
+// not succeed, throw an exception
 void rotateAuditLog() {
-    logv2::rotateLogs(serverGlobalParams.logRenameOnRotate, logv2::kAuditLogTag, [](Status s) {});
+    if (!globalAuditManager.isEnabled()) {
+        return;
+    }
+
+    logv2::rotateLogs(serverGlobalParams.logRenameOnRotate,
+                      logv2::kAuditLogTag,
+                      [](Status s) -> void { uassertStatusOK(s); });
 }
 
 namespace {
